corrected spacing and graphic dimensions

--- a/button_style.css
+++ b/button_style.css
@@ -10,20 +10,25 @@ body {
    padding: 0;
 }
 
+html {
+  margin: 0;
+  padding: 0;
+}
+
 .print_content {
   background-color: #fff;
 }
 
 .print_page {
-  width: 7.5in;
-  height: 10in;
+  width: 8in;
+  height: 10.5in;
   margin: 0in;
-  padding: 0.5in;
+  padding: 0.25in;
   padding-bottom: 0in !important;
 }
 
 .dot {
-  margin: 0.05in;
+  margin: 0.15in;
   height: 1.6in;
   width: 1.6in;
   background-color: #fff;
@@ -34,8 +39,8 @@ body {
 }
 
 .graphic {
-  width: 1.156in;
-  height: 1.156in;
+  width: 1.24in;
+  height: 1.24in;
   margin: auto;
   display: block;
   border-radius: 50%;
